[package]
name = "positron"
edition = "2018"
license = "GPL-3.0"
version = "0.2.3"
repository = "https://github.com/DevHyperCoder/positron.git"
description = "parse and execute boolean expressions"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
itertools = "0.10.1"
serde = { version = "1.0", optional = true, features = ["derive"] }


[features]
json = ["serde"]
